k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-mastery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-mastery
  template:
    metadata:
      labels:
        app: gitops-mastery
    spec:
      containers:
        - name: practice-container
          image: ghcr.io/craztool/gitops-mastery:15c7c435cfafb27cbe1237029e66fc4a171e8a8e
          ports:
            - containerPort: 8080
